  use of global default of 0.5 sec.
- Fix to twisted/udp non-default local endpoint binding features. Common
  socket ('host', port) notation is now supported.
- Fix to Twisted-based transport to make it closing UDP port / UNIX pipe
  on shutdown.
- Fix to Twisted-based dispatcher not to close transport on unregistration
  at dispatcher as transports can potentially be reused elsewhere.
- The delV3User() function improved to drop all rows from USM table that
  were cloned from the target one.
- Fix to exceptions handling at MsgAndPduDispatcher.sendPdu() to avoid
  sendPduHandle miss (followed by system crash) on cache expiration run.
- Break cyclic references at CommandResponder and NotificationReceiver apps
  through close() method.
- Fix to octet string typing at 3DES codec (used to throw an exception).
- Typos fixed in error-status constants at CommandResponder
- Missing import added to oneliner auth module.
- Cosmetic changes to v3arch example scripts.

Revision 4.2.4
--------------

- SNMPv3 high-level and native API examples reworked and extended to cover
  many use cases.
- The missing functionality of NOTIFICATION-TYPE objects being looked up
  at local Management Instrumentation and attached to TRAP/INFORM message
  by Notification Originator is now fully implemented.
- The missing functionality of passing Response PDU contents of INFORM
  request is now implemented at Notification Originator app. The return
  value of NotificationOriginator.sendNotification is now a composite object
  that includes errorStatus, errorIndex and varBinds.
- The missing functionality of passing lookupNames & lookupValues params
  to Notification Originator is now implemented. It may make sense for
  INFORMs.
- The missing functionality of passing contextName to oneliner
  version of NotificationOriginator.sendNotification is now implemented.
- Oneliner example apps now include cases where non-default SNMP
  ContextEngineId/ContextName/SecurityEngineId is used.